# Prompter

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: docs.yml
docs/: conf.py  conf.py.template  index.rst  index.rst.template
docs/api/: modules.rst  prompter.rst.template
prompter/: __init__.py  anthropic_executor.py  base_executor.py  bureaucracy.py  gemini_executor.py  image_data.py  openai_executor.py  schemas.py  test.py  tool_belt.py  tools.py
tests/: conftest.py  test_anthropic_conversion.py  test_anthropic_executor.py  test_basic_chat.py  test_conversation_history.py  test_image_handling.py  test_openai_conversion.py  test_openai_executor.py  test_response_format.py  test_schemas.py  test_tool_belt.py  test_tool_usage.py
